Add integration script

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
     <canvas width="720" height="720"></canvas>
   </div>
   ${scripts}
+  <script src="//api.beta.salemove.com/salemove_integration.js"></script>
 </body>
 </html>
