--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,22 @@
   <!-- <title>${title}</title> -->
   <title>Hello World WebGL</title>
   ${links}
+
+  <script>
+    window.getGliaContext = function() {
+      function extractQueryParamValueFromString(paramName, urlString) {
+        var regex = new RegExp("[?|&]" + paramName + "=([^&]*)");
+        var executedRegex = urlString.match(regex);
+        return !executedRegex ? null : executedRegex[1];
+      }
+
+      var queryParamName = "external_session_id";
+
+      return {
+        sessionId: extractQueryParamValueFromString(queryParamName, window.location.href)
+      };
+    };
+  </script>
 </head>
 <body>
   <div id="content">
